# tanpura-app

./: .gitignore  CMakeLists.txt  PROPOSAL.md  README.md
apps/: cinder_app_main.cc
include/core/: note.h  player.h  tanpura_string.h
include/visualizer/: tanpura_app.h
src/core/: player.cc  tanpura_string.cc
src/visualizer/: tanpura_app.cc
tests/: test_player.cc  test_tanpura_string.cc
